# aegisflow-risk-platform

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aegisflow/: __init__.py  anomaly_model.py  api.py  decision_brief.py  event_generator.py  features.py  pipeline.py  pipeline_health.py  risk_engine.py
app/: index.html  main.js  styles.css
data/: sample_events.json
docs/: api.md  architecture.md  design-log.md  incident-walkthrough.md  limitations.md  linkedin-post.md
tests/: test_anomaly_model.py  test_api.py  test_event_generator.py  test_features.py  test_pipeline.py  test_risk_engine.py
